# coursecut

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.claude/agents/: feature-implementer.md  independent-reviewer.md  repo-triage.md
.claude/skills/coursecut-architecture/: SKILL.md
.claude/skills/coursecut-data-model/: SKILL.md
.claude/skills/coursecut-privacy-invariants/: SKILL.md
.claude/skills/parallel-worktrees/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: PRD.md  lesson-ai-edit-plan.md  lesson-segments-plan.md  release-process.md  ux-overhaul-plan.md  whisper-chunking-plan.md
scripts/: fetch-ffmpeg.sh  worktree.sh
site/: index.html
src/: App.tsx  db.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_video_audio_cache.sql  0003_lesson_ai_fields.sql  0004_app_settings.sql  0005_export_queue_fields.sql  0006_lesson_segments.sql
src-tauri/src/: app_settings.rs  db.rs  export.rs  ffmpeg.rs  lib.rs  main.rs  openai.rs  progress.rs  settings.rs  wav.rs
src/components/: Breadcrumbs.tsx  CreateLessonModal.tsx  LessonCard.tsx  LessonPreviewPlayer.tsx  SourceVideoPreview.tsx
src/hooks/: useVideoProgress.ts
src/views/: ExportHistoryView.tsx  HomeView.tsx  LessonEditorView.tsx  LessonSegmentsView.tsx  ProjectDetailView.tsx  SettingsView.tsx  TranscriptStageView.tsx
