[package]
name = "coursecut"
version = "1.3.0"
description = "AI Course Builder — local-first lecture-to-lesson editor"
edition = "2021"

[lib]
name = "coursecut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keyring = "2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "multipart"] }
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros"] }
tauri-plugin-shell = "2"
sha2 = "0.11.0"
regex = "1"
